
The current verison of JMagick should be compatible with any version
of ImageMagick version 6.3.9 to version 6.4.2 (at least).

---------------

2007-07-01  Jacob Nordfalk - JMagick 6.4.2
	* look for include files in both ${MPATH}/include/magick/api.h (old IM way) and
		${MPATH}/include/ImageMagick/magick/api.h  (IM 6.3.8.something and later)
	* Test run on Q16 (16 bits per pixed)

2007-05-22  Jacob Nordfalk
	* Small updates of javadoc

2008-??-??  Jacob Nordfalk
	* Added a test suite

2007-02-27  Jacob Nordfalk
	* Added methods setImageProfile and getImageProfile
	* Deprecated old and only partly working profile methods
	* Introduced package magicktest.BETA for test cases not yet finished

2007-02-25  Andy Lewis
	* Updated ExceptionType and GeometryFlags to reflect IM changes in 6.3.9
	* This makes JM INCOMPATIBLE WITH ImageMagick versions before 6.3.9

2007-02-26  Jacob Nordfalk
	* Renamed test classes and polished the tests
	* Updated Win32 Makefile.all for Visual Studio 8.

2007-02-25  Andy Lewis
	* Updated CompositeOperator to reflect IM changes made to composite.h since 6.2.9
	* Added methods blurImageChannel() and trimImage()

2007-02-22  Jacob Nordfalk
	* First version on SourceForge.net
	* Renamed package test to magicktest and moved utility class MagickWindow to magick.util
	* configure.in now claims version is 6.3.8

2008-02-19  Eric O'Laughlen
	* A few tweaks to the output lib names to support version numbers and symlinks.
	For example, it outputs libJMagick-6.2.6.dylib and a link called libJMagick.dylib (.so's on Linux).
	An option to the configure.in offers an arg --with-shared-lib-ext=.dylib.

2007-11-26  Jacob Nordfalk
	* The ImageMagick engine wasnt initialized from JMagick!
		Fixed. Now setting environment variables also work, like:
		MAGICK_DEBUG=Resource       (IM debugging)
		MAGICK_MEMORY_LIMIT=100     (limit mem use to 100MB)
		(see http://www.imagemagick.org/script/resources.php#environment)


2007-06-26  Ian Michell