@@ -4,12 +4,15 @@ of ImageMagick version 6.3.9 to version 6.4.2 (at least).
 
 ---------------
 
-2007-07-01  Jacob Nordfalk - JMagick 6.4.2
+2008-08-05
+	* Added setImageOption()  (contrib from Scott Knight at Specialized Business Software)
+
+2008-07-01  Jacob Nordfalk - JMagick 6.4.2
 	* look for include files in both ${MPATH}/include/magick/api.h (old IM way) and
 		${MPATH}/include/ImageMagick/magick/api.h  (IM 6.3.8.something and later)
 	* Test run on Q16 (16 bits per pixed)
 
-2007-05-22  Jacob Nordfalk
+2008-05-22  Jacob Nordfalk
 	* Small updates of javadoc
 
 2008-??-??  Jacob Nordfalk
